# CMDV-testing

./: .dockerignore  .gitignore  .gitmodules  ALI_foStokesMMS.html  CLUBB_clipping_test.html  CMakeLists.txt  Coagulation.html  Dockerfile  ENVIRONMENTS.txt  README.md  READNE.md  SWTC1.html  VerifPage1.html  VerifPage2.html  cmdv-env-py2.yml  cmdv-env-py3.yml  cmdv-testing.config.yaml  gauss_hermite_accuracy.html  global_verif_smry_test.html  index.html  index.ipynb  init.bat  init.sh  mpas_test_compare.html  palm_cvmix_compare.html  palm_cvmix_compare_v2.html  palm_cvmix_compare_v3.html  python-modules.txt  rounded_parameter_accuracy.html  rounded_parameters_accuracy.html  wateruptake.html
CLUBB_standalone_model/: CLUBB_verification_test.ipynb
CWL/Tools/: notebookCconvert.cwl
Config/: config.yaml.template  global_test_config.template.json  test_config.template.yaml  tests_config.short.example.yaml  tests_config.short.yaml.template  tests_config.yaml.template
Config/old/: global_test_config.json
Docker/: README.md  jenkins-compose.yaml  softenv.gcc-4.4.7.dockerfile  softenv.gcc-4.8.5.dockerfile  softenv.gcc-5.3.0.dockerfile  softenv.gcc-5.5.0.dockerfile  softenv.gcc-7.2.0.dockerfile  softenv.intel.dockerfile
Docker/Compose/: docker-compose.yml
Docker/Dockerfiles/: README.md  cdash.dockerfile  clubb-test-runner.dockerfile  clubb.dockerfile  cmdv-test-runner.dockerfile  jenkins-slave.dockerfile  notebook.dockerfile  pFUnit.dockerfile  python2.dockerfile  softenv.gcc-5.3.0.dockerfile  softenv.gcc-5.3.1.python.3.dockerfile  softenv.gcc-7.2.0.dockerfile
Examples/MAM_box/tests/: GNUmakefile  Test_MAM_box.pf  Test_units.pf  testSuites.inc
Examples/flashTestExample/: config  cs.status.UnitTest  setup  setup.py  test.info
Examples/flashTestExample/object/: Makefile  exeTest.sh
Examples/search_list_of_names/: GNUmakefile  checkName
MAM_box_model/src/: Coagulation.ipynb  Makefile  abortutils.F90  aerodep_flx.F90  cam_history.F90  cam_logfile.F90  cambox_config.cpp.in  cambox_config.cpp.in.mam3.pcols12  cambox_config.cpp.in.mam4.pcols12  cambox_config.cpp.in.mam7.pcols12  cambox_config.cpp.in.mam7.pcols12.mos_spec  cambox_config.make.in  chem_mods.F90  cloudchem_simple.F90  config_cpp.csh  constituents.F90  driver.F90  driverT1.F90  driverT2.F90  driverT3.F90  driverT4.F90  driverT5.F90  driver_init.F90  driver_utilities.F90  error_function.F90  fort.130  fort.131  fort.132  fort.133  fort.134  fort.135  fort.136  fort.137  fort.138  fort.139  fort.150  fort.151  fort.152  fort.153  fort.154  (+61 more)
Tests/: SOP-Create-test-environment-for-self-tests.md  unittest-discovery.test.yaml
cdash/: CMakeCache.txt  CMakeCache.txt.orig  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  DartConfiguration.tcl.orig  Makefile  cmake_install.cmake  runUnitTest.sh  runUnitTest_template.sh  send_email.sh
condensation/gauss_hermite_accuracy/: verification.html
condensation/gauss_hermite_convergence/: verification.html
condensation/gauss_hermite_rounded_points/: verification.html
condensation/h2so4_sol_correctness/: verification.html
condensation/h2so4_taylor/: verification.html
condensation/rounded_parameter_accuracy/: verification.html
condensation/soag_convergence/: verification.html
condensation/soag_substep_convergence/: verification.html
dashboards/camobap.ca.sandia.gov/: CTestConfig.cmake  Project.xml  README_CDASH  README_CMAKE  ctest_nightly.cmake  do-cmake  nightly_cron_script.sh
dashboards/cori.nersc.gov/: CTestConfig.cmake  README_CMAKE  cronjob  ctest_nightly.cmake  modules.sh  process_results.sh  send_email.sh
dashboards/edison.nersc.gov/: Project.xml  README_CDASH  README_CMAKE  cronjob  ctest_nightly.cmake  do-cmake  modules.sh  send_email.sh
dashboards/jenkins.lcrc.anl.gov/: Jenkinsfile  README_CDASH  ctest_jenkins.cmake  do-cmake  process_results.sh  run_cdash.sh
documentation/latex_env/: LaTeX_Env_Test.ipynb  README.txt  biblio.bib
documentation/prototype/: .gitignore  CitationTest.ipynb  README.txt  SWTC1.ipynb  SimpleExample.ipynb  Template.ipynb  converter.py  global_verif_smry_test.ipynb  plotting.py  ref.bib  tools.py
flashTest/: config  configTemplate  config~  createInfoFile.py  exeScriptTemplate  flashTest.py  test.info  test.info~
flashTest/lib/: flashModule.py  getProcessResults.py
lib/: CMakeLists.txt
lib/python/: CMakeLists.txt  Config.py  Deploy.py  ResultReporter.py  SetupStep.py  Workflow.py
lib/python/Archive/: Archive.py  CDash.py  CMakeLists.txt  Shock.py
lib/python/Report/: CMakeLists.txt  LocalLogging.py  Shock.py  TestRunnerLogging.py  Tests.py
lib/python/Workflows/: CMDV.py  CMakeLists.txt  Test.py
lib/python/test/: CMakeLists.txt  config_test.py
nightly/: README.md  unittest.stderr  unittest.txt
scripts/: CMakeLists.txt  add2gh-pages.sh  clone-dir.bat  clone-dir.sh  cmdv-test-runner  cmdv-test-runner.py  config.json  deploy-code.py  nb2html  nb2html.py  nb2html_old  nb2html_old.py  nb2latex  nb2latex.py
tests/: CMakeLists.txt  check_error.sh  config.test.yaml  runUnitTest.sh  runtest.cmake  set_paths.sh  turn_off_gitpython.sh
wateruptake/: verification.html
www/: develop.html
(+47 files in other folders)
